fix alignment of Made in Anytype button

--- a/static/layout.css
+++ b/static/layout.css
@@ -2048,7 +2048,7 @@ a {
     position: fixed;
     bottom: 10px;
     right: 10px;
-    padding: 12px;
+    padding: 10px;
     border-radius: 8px;
     background: var(--color-shape-tertiary);
 }
@@ -2057,7 +2057,7 @@ a {
     color: var(--color-text-primary);
     font-size: var(--font-size-small);
     font-weight: 500;
-    margin-top: -4px;
+    margin-top: -2px;
     padding-left: 7px;
 }
 
